--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "ejs": "^1.0.0",
         "ejs-mate": "^3.0.0",
         "express": "^4.6.1",
+        "express-session": "^1.17.0",
         "pg-promise": "^9.3.3"
     }
 }
